Fix the overflow

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -31,10 +31,6 @@ a {
   text-shadow: $text-shadow;
 }
 
-html {
-  overflow: hidden;
-}
-
 head {
   z-index: -2;
   display: block;
